...
            .toolbar {
                Button(action: {
                    isAddMemberViewPresent = true
                }) {
                    Image(systemName: "plus") // Use any SF Symbol name here
                        .foregroundColor(GymAppTheme.iconsButtonsColor)    // Set color for the image
                        .accessibilityIdentifier("PlusButton")
                }

            }
        }
       
        .sheet(isPresented: $isAddMemberViewPresent) {
            GymMemberAddView(config: GymMemberAddViewConfig()).accessibilityIdentifier("GymMemberAddView")
        }
        
    }
}


...
